Fixed more jdk 11