@@ -11,6 +11,7 @@ import org.ships.vessel.structure.PositionableShipsStructure;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ErrorFailedToFindLicenceSignMessage implements Message<PositionableShipsStructure> {
     @Override
@@ -32,7 +33,7 @@ public class ErrorFailedToFindLicenceSignMessage implements Message<Positionable
     public Component processMessage(@NotNull Component text, PositionableShipsStructure obj) {
         List<MessageAdapter<PositionableShipsStructure>> structureAdapters = MessageAdapters
                 .getAdaptersFor(AdapterCategories.VESSEL_STRUCTURE)
-                .toList();
+                .collect(Collectors.toList());
         for (MessageAdapter<PositionableShipsStructure> adapter : structureAdapters) {
             text = adapter.processMessage(obj, text);
         }
