@@ -14,6 +14,7 @@ import org.ships.vessel.common.types.Vessel;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class ErrorTooManyOfBlockMessage implements Message<Map.Entry<Vessel, BlockType>> {
     @Override
@@ -35,10 +36,11 @@ public class ErrorTooManyOfBlockMessage implements Message<Map.Entry<Vessel, Blo
 
     @Override
     public Component processMessage(@NotNull Component text, Map.Entry<Vessel, BlockType> obj) {
-        List<MessageAdapter<Vessel>> vesselAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).toList();
+        List<MessageAdapter<Vessel>> vesselAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).collect(
+                Collectors.toList());
         List<MessageAdapter<BlockType>> blockTypeAdapters = MessageAdapters
                 .getAdaptersFor(AdapterCategories.BLOCK_TYPE)
-                .toList();
+                .collect(Collectors.toList());
 
         for (MessageAdapter<Vessel> adapter : vesselAdapters) {
             text = adapter.processMessage(obj.getKey(), text);
