@@ -12,6 +12,7 @@ import org.ships.vessel.common.types.Vessel;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ErrorVesselStillLoadingMessage implements Message<Vessel> {
     @Override
@@ -35,7 +36,8 @@ public class ErrorVesselStillLoadingMessage implements Message<Vessel> {
 
     @Override
     public Component processMessage(@NotNull Component text, Vessel obj) {
-        List<MessageAdapter<Vessel>> vesselAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).toList();
+        List<MessageAdapter<Vessel>> vesselAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).collect(
+                Collectors.toList());
         for (MessageAdapter<Vessel> adapter : vesselAdapters) {
             text = adapter.processMessage(obj, text);
         }
