@@ -12,6 +12,7 @@ import org.ships.vessel.common.types.Vessel;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class InfoPlayerSpawnedOnShipMessage implements Message<Vessel> {
     @Override
@@ -31,7 +32,8 @@ public class InfoPlayerSpawnedOnShipMessage implements Message<Vessel> {
 
     @Override
     public Component processMessage(@NotNull Component text, Vessel obj) {
-        List<MessageAdapter<Vessel>> adapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).toList();
+        List<MessageAdapter<Vessel>> adapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).collect(
+                Collectors.toList());
         for (MessageAdapter<Vessel> adapter : adapters) {
             if (adapter.containsAdapter(text)) {
                 text = adapter.processMessage(obj, text);
