@@ -12,6 +12,7 @@ import org.ships.vessel.common.types.Vessel;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class InfoSizeMessage implements Message<Vessel> {
     @Override
@@ -34,7 +35,9 @@ public class InfoSizeMessage implements Message<Vessel> {
 
     @Override
     public Component processMessage(@NotNull Component text, Vessel obj) {
-        List<MessageAdapter<Vessel>> vesselAdapter = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL).toList();
+        List<MessageAdapter<Vessel>> vesselAdapter = MessageAdapters
+                .getAdaptersFor(AdapterCategories.VESSEL)
+                .collect(Collectors.toList());
         for (MessageAdapter<Vessel> adapter : vesselAdapter) {
             text = adapter.processMessage(obj, text);
         }
