@@ -4,6 +4,7 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.jetbrains.annotations.NotNull;
 import org.ships.config.messages.Message;
+import org.ships.config.messages.adapter.MessageAdapter;
 import org.ships.config.messages.adapter.MessageAdapters;
 import org.ships.config.messages.adapter.category.AdapterCategories;
 import org.ships.config.messages.adapter.category.AdapterCategory;
@@ -11,6 +12,7 @@ import org.ships.config.messages.adapter.category.AdapterCategory;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class InfoVesselInfoMessage implements Message<Map.Entry<String, String>> {
     @Override
@@ -33,8 +35,8 @@ public class InfoVesselInfoMessage implements Message<Map.Entry<String, String>>
 
     @Override
     public Component processMessage(@NotNull Component text, Map.Entry<String, String> obj) {
-        var infoAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL_INFO).toList();
-        for (var adapter : infoAdapters) {
+        List<MessageAdapter<Map.Entry<String, String>>> infoAdapters = MessageAdapters.getAdaptersFor(AdapterCategories.VESSEL_INFO).collect(Collectors.toList());
+        for (MessageAdapter<Map.Entry<String, String>> adapter : infoAdapters) {
             text = adapter.processMessage(obj, text);
         }
         return text;
